FIX SPACE BETWEEN FLEXBOX RIGHT ALIGN

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -149,6 +149,9 @@ a.unstyled {
 .flexbox.space-between {
 	justify-content: space-between;
 }
+.flexbox.right-align.space-between > :only-child {
+	margin-left: auto;
+}
 
 .flexbox.comfortable-spacing {
 	row-gap: var(--standard-spacing);
